--- a/IdeaProjects/Sprint-Autotest/build.gradle
+++ b/IdeaProjects/Sprint-Autotest/build.gradle
@@ -2,19 +2,29 @@ plugins {
     id 'java'
 }
 
+group = 'com.example'
+version = '1.0-SNAPSHOT'
+sourceCompatibility = '11'
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
-    testImplementation 'com.codeborne:selenide:5.22.0' // Зависимость для Selenide
+    // JUnit для тестирования
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+
+    // Selenide для UI тестирования
+    testImplementation 'com.codeborne:selenide:5.22.0'
+
+    // RestAssured для тестирования REST API
+    testImplementation 'io.rest-assured:rest-assured:4.3.3'
+
+    // Hamcrest для удобных ассертов
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 
 test {
-    useJUnitPlatform() // Для использования JUnit 5
+    useJUnitPlatform() // Используем JUnit 5
 }
-
-
-
